<resources>
    <string name="app_name">Flow Done</string>
    <string name="loginText">Type in your email</string>
    <string name="enterPassword">password</string>
    <string name="loginButton">Login</string>
    <string name="signUp"><u>If you haven\'t made an account yet click here to sign up</u></string>
    <string name="logout">Logout</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="addSomething">You didn\'t add any cards yet! Press the button below to start your procrastination-free journey!</string>
    <string name="newPassword">Type In Your New Password</string>
    <string name="confirmPassword">Please Re-Enter Your Password</string>
    <string name="alreadHaveAccount"><u>If you already have an account click here to login</u></string>
    <string name="createAccount">Create Account</string>
</resources>
