<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingBottom="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/emailText"
            android:layout_gravity="center"
            android:hint="@string/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="25dp"/>

        <EditText
            android:id="@+id/newPassword"
            android:layout_gravity="center"
            android:hint="@string/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/checkPassword"
            android:layout_gravity="center"
            android:hint="@string/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/createAccount"
            android:text="@string/createAccount"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/loginActivityText"
            android:text="@string/alreadHaveAccount"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textColor="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>